--- a/01-Basics.Rmd
+++ b/01-Basics.Rmd
@@ -41,28 +41,22 @@ weightedsd <- sqrt(wtd.var(x,y))/sqrt(n)
 var(variable)
 ```
 
-## Tables, Frames & Matrices
+## Tables, frames & matrices
 
->
-As matrix
->
+> As matrix
 
 ```{r message=FALSE, warning=FALSE}
 matrix(c(1:8), nrow = 4, byrow = TRUE) #organized by row
 matrix(c(1:8), ncol = 4, byrow = FALSE) #organized by col
 ```
 
->
-As data frame
->
+> As data frame
 
 ```{r}
 data.frame(Column1 = c(1:5), Column2 = c(1:5))
 ```
 
->
-As data table
->
+> As data table
 
 ```{r}
 library(data.table)
@@ -144,8 +138,7 @@ tail(cars) # last 6 rows of the data set
 
 Reading excel
 
-`library(readxl)`  /
-`data <- read.xls("data.xlsx", stringsAsFactors = TRUE)`
+`library(readxl)` / `data <- read.xls("data.xlsx", stringsAsFactors = TRUE)`
 
 ```{r}
 names(cars) # shows the column names of the data set
@@ -205,70 +198,71 @@ Will start a new page for example in a pdf document
 
 ### Setup rmarkdown & code chunks
 
-+-------------------------+----------------------------------------------------------+
-| Call                    | Description                                              |
-+=========================+==========================================================+
-| Warning = T/F    | Include / exclude warnings                               |
-+-------------------------+----------------------------------------------------------+
-| Echo = T/F       | Include / exclude r chunks but show output               |
-+-------------------------+----------------------------------------------------------+
-| Include = T/F   | Run code but do not include in the knitted document      |
-+-------------------------+----------------------------------------------------------+
-| Comment = "" \| Include | / exclude \#\# in output code chunks                     |
-+-------------------------+----------------------------------------------------------+
-| Message = T/F    | Includes / excludes message from code                    |
-+-------------------------+----------------------------------------------------------+
-| out.width='100%'        | Adjusts size of figure / chart                           |
-+-------------------------+----------------------------------------------------------+
-| fig.width =             | Set specific size of figure / chart width                |
-+-------------------------+----------------------------------------------------------+
-| fig.height =            | Set specific size of figure / chart height               |
-+-------------------------+----------------------------------------------------------+
-| fig.cap=                | Adds a title to a figure                                 |
-+-------------------------+----------------------------------------------------------+
-| fig.align=              | 'center', 'left', 'right', adjust figure / chart at page |
-+-------------------------+----------------------------------------------------------+
++--------------------------+----------------------------------------------------------+
+| Call                     | Description                                              |
++==========================+==========================================================+
+| Warning = T/F \| Includ  | e / exclude warnings                                     |
++--------------------------+----------------------------------------------------------+
+| Echo = T/F \| Includ     | e / exclude r chunks but show output                     |
++--------------------------+----------------------------------------------------------+
+| Include = T/F \| Run cod | e but do not include in the knitted document             |
++--------------------------+----------------------------------------------------------+
+| Comment = "" \| Include  | / exclude \#\# in output code chunks                     |
++--------------------------+----------------------------------------------------------+
+| Message = T/F \| Includ  | es / excludes message from code                          |
++--------------------------+----------------------------------------------------------+
+| out.width='100%'         | Adjusts size of figure / chart                           |
++--------------------------+----------------------------------------------------------+
+| fig.width =              | Set specific size of figure / chart width                |
++--------------------------+----------------------------------------------------------+
+| fig.height =             | Set specific size of figure / chart height               |
++--------------------------+----------------------------------------------------------+
+| fig.cap=                 | Adds a title to a figure                                 |
++--------------------------+----------------------------------------------------------+
+| fig.align=               | 'center', 'left', 'right', adjust figure / chart at page |
++--------------------------+----------------------------------------------------------+
 
 ### Latex
 
-+--------------------+--------------------+-------------------------------+
-| Symbol             | Writing            | Description                   |
-+:==================:+:==================:+:=============================:+
-| $\mu$              | `$\mu$`            | Population mean               |
-+--------------------+--------------------+-------------------------------+
-| $\sigma$           | `$\sigma$`         | Population standard deviation |
-+--------------------+--------------------+-------------------------------+
-| $\bar{x}$          | `$\bar{x}$`        | Sample mean                   |
-+--------------------+--------------------+-------------------------------+
-| ${e}$              | `${e}$`            | Standard error                |
-+--------------------+--------------------+-------------------------------+
-| $\ge$              | `$\ge$`            | Bigger than                   |
-+--------------------+--------------------+-------------------------------+
-| $\le$              | `$\le$`            | Smaller than                  |
-+--------------------+--------------------+-------------------------------+
-| $\pi$              | `$\pi$`            | Pie                           |
-+--------------------+--------------------+-------------------------------+
-| $\hat f$           | `$\hat f$`         | Estimator                     |
-+--------------------+--------------------+-------------------------------+
-| $\frac{1}{2}$      | `$\frac{1}{2}$`    | Fraction                      |
-+--------------------+--------------------+-------------------------------+
-| $\sum$             | `$\sum$`           | Sum                           |
-+--------------------+--------------------+-------------------------------+
-| $\sum_{i=1}^{n}$   | `$\sum_{i=1}^{n}$` | Sequence                      |
-+--------------------+--------------------+-------------------------------+
-| $\nabla$           | `$\nabla$`         | Gradient, Nabla                |
-+--------------------+--------------------+-------------------------------+
-| $\partial$         | `$\partial$`       | Partial                       |
-+--------------------+--------------------+-------------------------------+
-| $\beta$            | `$\beta$`          | Beta                          |
-+--------------------+--------------------+-------------------------------+
-| $\beta^1$          | `$\beta^1$`        | Beta 1                        |
-+--------------------+--------------------+-------------------------------+
-| $\alpha$           | `$\alpha$`         | Alpha                         |
-+--------------------+--------------------+-------------------------------+
-| $\approx$          | `$\approx$`        | Similar to                    |
-+--------------------+--------------------+-------------------------------+
-
++-------------------+--------------------+-------------------------------+
+| Symbol            | Writing            | Description                   |
++:=================:+:==================:+:=============================:+
+| $\mu$             | `$\mu$`            | Population mean               |
++-------------------+--------------------+-------------------------------+
+| $\sigma$          | `$\sigma$`         | Population standard deviation |
++-------------------+--------------------+-------------------------------+
+| $\bar{x}$         | `$\bar{x}$`        | Sample mean                   |
++-------------------+--------------------+-------------------------------+
+| ${e}$             | `${e}$`            | Standard error                |
++-------------------+--------------------+-------------------------------+
+| $lambda$          | `$lambda$`         | Lambda                        |
++-------------------+--------------------+-------------------------------+
+| $\ge$             | `$\ge$`            | Bigger than                   |
++-------------------+--------------------+-------------------------------+
+| $\le$             | `$\le$`            | Smaller than                  |
++-------------------+--------------------+-------------------------------+
+| $\pi$             | `$\pi$`            | Pie                           |
++-------------------+--------------------+-------------------------------+
+| $\hat f$          | `$\hat f$`         | Estimator                     |
++-------------------+--------------------+-------------------------------+
+| $\frac{1}{2}$     | `$\frac{1}{2}$`    | Fraction                      |
++-------------------+--------------------+-------------------------------+
+| $\sum$            | `$\sum$`           | Sum                           |
++-------------------+--------------------+-------------------------------+
+| $\sum_{i=1}^{n}$  | `$\sum_{i=1}^{n}$` | Sequence                      |
++-------------------+--------------------+-------------------------------+
+| $\nabla$          | `$\nabla$`         | Gradient, Nabla               |
++-------------------+--------------------+-------------------------------+
+| $\partial$        | `$\partial$`       | Partial                       |
++-------------------+--------------------+-------------------------------+
+| $\beta$           | `$\beta$`          | Beta                          |
++-------------------+--------------------+-------------------------------+
+| $\beta^1$         | `$\beta^1$`        | Beta 1                        |
++-------------------+--------------------+-------------------------------+
+| $\alpha$          | `$\alpha$`         | Alpha                         |
++-------------------+--------------------+-------------------------------+
+| $\approx$         | `$\approx$`        | Similar to                    |
++-------------------+--------------------+-------------------------------+
 
 ## Miscellaneous
 
