--- a/03-Probability.Rmd
+++ b/03-Probability.Rmd
@@ -1,6 +1,10 @@
-# Applied Statistics
+---
+editor_options: 
+  markdown: 
+    wrap: 72
+---
 
-## Probability
+# Applied Statistics
 
 *Class given by: Walter Garcia-Fontes*
 
@@ -30,23 +34,26 @@ df = 4
 sd = 2
 ```
 
+## Probability
+
 ```{r}
 out <- c("Red", "White", "Black", "Blue", "Green")
-freq <- c(1,2,3,4,5)
+freq <- c(1,1,1,1,1)
 s <- probspace(out, probs = freq)
 print(s)
 ```
 
-1. If you toss two fair coins, what is the probability of two heads?
+1.  If you toss two fair coins, what is the probability of two heads?
 
 ```{r}
-space <- tosscoin(2, makespace = TRUE)
+space <- tosscoin(2, makespace = TRUE) # make space TRUE if all outcomes have equally likely probability
 p <- Prob(space, toss1 == "H" & toss2 == "H")
 ```
 
 *The probability is: `r p`*
 
-2. When two dice are thrown, what is the probability of a 3 followed by a 5?
+2.  When two dice are thrown, what is the probability of a 3 followed by
+    a 5?
 
 ```{r}
 space <- rolldie(2, makespace = TRUE)
@@ -55,7 +62,8 @@ p <- Prob(space, X1 == 3 & (X2 == 5) )
 
 *The probability is: `r round(p, 2)`*
 
-3. Sampling from an urn with or without replacement. 3 balls and sample size of 2:
+3.  Sampling from an urn with or without replacement. 3 balls and sample
+    size of 2:
 
 ```{r}
 sample1 <- urnsamples(1:3, size = 2, replace = TRUE, ordered = TRUE)
@@ -64,14 +72,19 @@ sample3 <- urnsamples(1:3, size = 2, replace = FALSE, ordered = FALSE)
 sample4 <- urnsamples(1:3, size = 2, replace = TRUE, ordered = FALSE)
 ```
 
+**Ordered:** logical indicating whether order among samples is
+important.
+
+**Replace:** logical indicating whether sampling should be done with
+replacement.
+
 ------------------------------------------------------------------------
 
-## Bayes Theorem
+## Bayes theorem
 
 **Unconditional probability:**
 
-P(S) and P(NS)
-Success or no success
+P(S) and P(NS) = Probability of success vs probability of no success
 
 ```{r}
 prS <- c(0.4, 0.6)
@@ -79,16 +92,16 @@ prS <- c(0.4, 0.6)
 
 **Conditional probability:**
 
-P(P | S ) and P( P | NS)
-Predicted given it is successful  
-Predicted given it is not successful
+P(P \| S ) and P( P \| NS) Predicted given it is successful vs Predicted
+given it is not successful
 
 ```{r}
 prNS <- c(0.6, 0.2)
 ```
 
-**Bayes prob, posterior probabilities**  
-P(S | P) & P(NS | P)
+**Bayes prob, posterior probabilities**\
+P(S \| P) & P(NS \| P) Probability it is predicted to be successful and
+it is vs. Probability it is predicted to NOT be successful and it isn't.
 
 ```{r}
 BayesTheorem(prS, prNS)
@@ -96,14 +109,16 @@ BayesTheorem(prS, prNS)
 
 ------------------------------------------------------------------------
 
-## Discrete Probablity
+## Discrete probablity
 
 ### Uniform discrete probability distribution
 
-1. Sample space with a set probability. Size = amount of tries
-2. Density function: Individual probability. F.E. Getting a 4
-3. Cumulative density: Uniform for a certain value distribution. F.E. 4 or less. 4 or more? 1-punif 3
-4. Inverse cumulative density: Uniform for a certain probability ( up until a certain value). F.E. up to 25% of the tries
+1.  Sample space with a set probability. Size = amount of tries
+2.  Density function: Individual probability. F.E. Getting a 4
+3.  Cumulative density: Uniform for a certain value distribution. F.E. 4
+    or less. 4 or more? -\> 1-punif 3
+4.  Inverse cumulative density: Uniform for a certain probability ( up
+    until a certain value). F.E. up to 25% of the tries
 
 ```{r, warning = FALSE, include = FALSE}
 one <- sample(p, size = n, replace = TRUE)
@@ -112,14 +127,19 @@ three <- punif(X, min = 0, max = 6)
 four <- qunif(X, min = 0, max = 6)
 ```
 
-***Default = # or less. For # or more do: 1-probability of # or less*** 
+***Default = \# or less. For \# or more put: 1-probability of \# or
+less***
 
 ### Binomial distribution
 
-1. Binomial for a specific value for a certain sample. F.E. 2 from the sample are successful.
-2. Binomial for a certain distribution of the sample. F.E. At most 2 in the sample are successful. Or 5 or more. 
-3. Binomial for a certain percentage of the  sample. F.E. 25% of the sample has x value or less. 
-4. Difference between two binomial values. F.E. Prob there are between 4 and 5 of the trials successful.
+1.  Binomial for a specific value for a certain sample. F.E. 2 from the
+    sample are successful.
+2.  Binomial for a certain distribution of the sample. F.E. At most 2 in
+    the sample are successful. Or 5 or more.
+3.  Binomial for a certain percentage of the sample. F.E. 25% of the
+    sample has x value or less.
+4.  Difference between two binomial values. F.E. Prob there are between
+    4 and 5 of the trials successful.
 
 ```{r, warning = FALSE}
 one <- dbinom(x, size = n, prob = y)	
@@ -128,16 +148,18 @@ three <- qbinom(p, size = n, prob = y)
 four <- diff(pbinom(c(X,Y), size = n, prob = y))
 ```
 
-***Default = # or less (left area of the distribution). For # or more do: 1-probability of # or less***
-
+***Default = \# or less (left area of the distribution). For \# or more
+do: 1-probability of \# or less***
 
 ### Poisson distribution
 
-**Expected value =** $n * p = LAMDA$
+**Expected value =** $n * p = \lambda$
 
-1. Poisson for a certain value. Lambda = n*p. F.E. Prob of having a 5
-2. Poisson for a certain value distribution. F.E. Prob of having less than 5. More than 5? = 1-	Ppois(4, lambda)
-3. Poisson for a certain probability to capture a certain value. F.E. Poisson value for 25%.
+1.  Poisson for a certain value. Lambda = n\*p. F.E. Prob of having a 5
+2.  Poisson for a certain value distribution. F.E. Prob of having less
+    than 5. More than 5? = 1- Ppois(4, lambda)
+3.  Poisson for a certain probability to capture a certain value. F.E.
+    Poisson value for 25%.
 
 ```{r, warning=FALSE}
 one <- dpois(x,lambda)
@@ -145,8 +167,8 @@ two <- ppois(x,lambda)
 three <- qpois(x,lambda)
 ```
 
-***Default = # or less (left area of the distribution). For # or more do: 1-probability of # or less*** 
-
+***Default = \# or less (left area of the distribution). For \# or more
+do: 1-probability of \# or less***
 
 ### The normal distribution
 
@@ -154,8 +176,8 @@ three <- qpois(x,lambda)
 
 For all normal distributions: 68-95-99.7 rule
 
-99.7% of observations are located between: -3 mu and 3  
-95% of observations are located between: -2 mu 2  
+99.7% of observations are located between: -3 mu and 3\
+95% of observations are located between: -2 mu 2\
 68% of observations are located between: -1 mu 1
 
 **Normal distribution**
@@ -167,11 +189,14 @@ For all normal distributions: 68-95-99.7 rule
 (11 - 10) / 2
 ```
 
-1. Normal distribution for a certain proportion. Pi = population proportion mean%.
-2. Normal distribution for a certain value distribution. F.E. Prob of value above 5. FALSE
-	Prob less than 9. TRUE
-3. Normal distribution for a certain probability to capture a certain value. F.E. Value that is given at 25% point. 
-4. Difference between two values on the normal distribution. F.E. between 5 and 10. 
+1.  Normal distribution for a certain proportion. Pi = population
+    proportion mean%.
+2.  Normal distribution for a certain value distribution. F.E. Prob of
+    value above 5. FALSE Prob less than 9. TRUE
+3.  Normal distribution for a certain probability to capture a certain
+    value. F.E. Value that is given at 25% point.
+4.  Difference between two values on the normal distribution. F.E.
+    between 5 and 10.
 
 ```{r}
 one <- pnorm(X, pi, sd, lower.tail = FALSE)
@@ -180,21 +205,22 @@ three <- qnorm(p, mu, sd, lower.tail = FALSE)
 four <- diff(pnorm(c(X,Y), mu, sd, lower.tail = FALSE))
 ```
 
-lower.tail = TRUE: The area of the left side of the slope  
+lower.tail = TRUE: The area of the left side of the slope\
 lower.tail = FALSE: The area of the right side of the slope
 
 **Confidence interval for normal distribution**
 
-z.test(x, sd=sigma)
-binconf(x = x, n = n) <- proportions
-t.test(variable) <- t-distribution for conf.inv
+z.test(x, sd=sigma) binconf(x = x, n = n) \<- proportions
+t.test(variable) \<- t-distribution for conf.inv
 
 #### Plotting the normal distribution
 
-"With mean = 3 and standard deviation = 7  
-Limits: mean +/- 3 * standard deviation  = 3*7 = 21 
-Lower limit = 3 – 21 = -18  
-Upper limit = 3 + 21 = 24"  
+Example:
+
+"With mean = 3 and standard deviation = 7"\
+Limits: mean +/- 3 \* standard deviation = 3\*7 = 21 \
+Lower limit = 3 -- 21 = -18\
+Upper limit = 3 + 21 = 24"
 
 Example:
 
@@ -213,13 +239,13 @@ text(0,0.15,"68%")
 
 #### Binomial
 
-It will be possible to use the Normal distribution as an approximation to the Binomial if: n is large and p > 0.1 
+It will be possible to use the normal distribution as an approximation
+to the binomial if: n is large and p \> 0.1.
 
-
-1. Density function (individual probability). 
-2. Cumulative density (between certain values). 
-3. Difference between two binomial values
-4. Inverse cumulative density. For a certain prob. 
+1.  Density function (individual probability).
+2.  Cumulative density (between certain values).
+3.  Difference between two binomial values.
+4.  Inverse cumulative density. For a certain prob.
 
 ```{r, warning = FALSE}
 one <- dbinom(x, mu, sd)
@@ -240,8 +266,8 @@ se <- sigma / sqrt(n)
 
 **Probability sample**
 
-1. To find the probability that X is larger than mu
-2. To find the probability that X is smaller than mu
+1.  To find the probability that X is larger than mu
+2.  To find the probability that X is smaller than mu
 
 ```{r}
 p <- pnorm(X, mu, se, lower.tail = TRUE) 
@@ -257,15 +283,16 @@ z <- (p - pi)/sd
 p <- pnorm(X, pi, se, lower.tail =FALSE)
 ```
 
+### Sample size
 
-**Sample size**
+Provides the sample size needed to have a 95% confidence to estimate the
+population mean. Level = confidence level. SE is required standard
+error.
 
-Package = "samplingbook".
-
-Provides the sample size needed to have a 95% confidence to estimate the population mean. 
-Level = confidence level. Se is required standard error. 
-
-**sample.size.mean(se, sigma, level=0.95)**
+```{r, message=FALSE, warning=FALSE}
+library(samplingbook)
+sample.size.mean(se, sigma, level=0.95)
+```
 
 ------------------------------------------------------------------------
 
@@ -273,14 +300,19 @@ Level = confidence level. Se is required standard error.
 
 ### Critical values
 
-**Critical value for normal distribution, sample > 30**  
+**Critical value for normal distribution (sample \> 30)**
 
-1. Two-sided: Critical value, 5% significance level = 1.96
-2. Two-sided: Critical value, 1% significance level = 2.58
-3. Two-sided: Critical value, 10% significance level = 1.96
-4. One-sided: Critical value, 5% significance level = 1.64
-5. One-sided: Critical value, 1% significance level = 2.33
-6. One-sided: Critical value, 10% significance level = 1.28
+1.  Two-sided: Critical value, 5% significance level = 1.96
+
+2.  Two-sided: Critical value, 1% significance level = 2.58
+
+3.  Two-sided: Critical value, 10% significance level = 1.96
+
+4.  One-sided: Critical value, 5% significance level = 1.64
+
+5.  One-sided: Critical value, 1% significance level = 2.33
+
+6.  One-sided: Critical value, 10% significance level = 1.28
 
 ```{r}
 qnorm(0.975)
@@ -292,14 +324,19 @@ qnorm(0.99)
 qnorm(0.90)
 ```
 
-**Critical values t-distribution**
+**Critical values t-distribution (sample \> 30)**
 
-1. One-sided: critical value at a 5% significance level
-2. One-sided: critical value at a 10% significance level
-3. One-sided: critical value at a 1% significance level
-4. Two-sided: critical value at a 5% significance level
-5. Two-sided: critical value at a 10% significance level
-6. Two-sided: critical value at a 1% significance level
+1.  One-sided: critical value at a 5% significance level
+
+2.  One-sided: critical value at a 10% significance level
+
+3.  One-sided: critical value at a 1% significance level
+
+4.  Two-sided: critical value at a 5% significance level
+
+5.  Two-sided: critical value at a 10% significance level
+
+6.  Two-sided: critical value at a 1% significance level
 
 ```{r}
 cv <- qt(0.95, df) 
@@ -327,9 +364,9 @@ mu_min <- mu - conf_int95
 
 **Large sample significance testing**
 
-1. Two-sided
-2. One-sided: X is greater than the population mean
-3. One-sided: X is less than the population mean
+1.  Two-sided
+2.  One-sided: X is greater than the population mean
+3.  One-sided: X is less than the population mean
 
 ```{r message=FALSE, warning=FALSE}
 library(BSDA)
@@ -343,31 +380,28 @@ three <- tsum.test(mean.x = X, s.x = sd, n.x = n, mu = mu, alternative = "less",
 
 **For proportions:**
 
-prop.test(x = X, n = n, p = p, correct = TRUE, alternative = "two.sided")
+prop.test(x = X, n = n, p = p, correct = TRUE, alternative =
+"two.sided")
 
 Same goes for above: two.sided, greater, less
 
 ### Test of equality - two samples
 
-H_0 <- $\mu1 = \mu2$ or $(\mu1 - \mu2) = 0$  
-H_a <- $\mu1 \neq \mu2$ or $\mu1 - \mu2 \neq 0$
+Null hypothesis (H_0) \<- $\mu1 = \mu2$ or $(\mu1 - \mu2) = 0$\
+Alternative hypothesis (H_a) \<- $\mu1 \neq \mu2$ or
+$\mu1 - \mu2 \neq 0$
 
-
-Difference in two means with a certain confidence level confidence interval. Default = 95%
+Difference in two means with a certain confidence levelc. Default = 95%
 
 ```{r}
 tsum.test(mean.x = X, s.x = sd, n.x = n, mean.y = X, s.y = sd, n.y = n, var.equal=FALSE)
 ```
 
-2-sample test for equality of proportions without continuity correction.
-
-prop.test(data, correct=FALSE, alternative="greater")
-
 ------------------------------------------------------------------------
 
 ## Non-Parametric testing
 
-### Contengency table / frequencies
+### Contingency table / frequencies
 
 Obtain contingency table
 
@@ -377,9 +411,9 @@ table(ToothGrowth$dose)
 
 ### Chi-square
 
-1. Chi-square test
-2. Get the expected value
-3. Probability for chi-square 
+1.  Chi-square test
+2.  Get the expected value
+3.  Probability for chi-square
 
 ```{r}
 data <- matrix(c(27,373,33,567),byrow=TRUE,nrow=2)
@@ -391,16 +425,16 @@ prop.table(chisq.test(data,correct=FALSE)$expected,1)
 prop.table(chisq.test(data,correct=FALSE)$expected,2)
 ```
 
-Degree of freedom = # of row - 1 * # of columns = fixed 
+Degree of freedom = \# of row - 1 \* \# of columns = fixed
 
-***All expected frequencies must be above five! If not, categories must be combined!***
-
+***All expected frequencies must be above five! If not, categories must
+be combined!***
 
 ### Goodness of fit
 
 **Uniform:**
 
-Degree of freedom =  number of categories - number of parameters - 1.
+Degree of freedom = number of categories - number of parameters - 1.
 
 ```{r}
 x <- c(1,2,3,4,5)
@@ -408,12 +442,12 @@ p <- rep(1/5, 5)
 chisq.test(x, p = p)
 ```
 
-***All expected frequencies must be above five! If not, categories must be combined!***
-
+***All expected frequencies must be above five! If not, categories must
+be combined!***
 
 **Binomial:**
 
-dbinom(x, size = n, prob = y)	
+dbinom(x, size = n, prob = y)
 
 For example:
 
@@ -436,13 +470,16 @@ pr2 <- c(dbinom(0,5,p)+dbinom(1,5,p),dbinom(2,5,p),dbinom(3,5,p),dbinom(4,5,p)+d
 chisq.test(nj2,p=pr2)
 ```
 
-***All expected frequencies must be above five! If not, categories must be combined!***
+***All expected frequencies must be above five! If not, categories must
+be combined!***
 
 **Poisson**
 
 Degree of freedom = number of categories - number of parameters - 1.
 
-NOTE! Distribution goes to infinity. Counter for one value that is X or more. 1 - until X. 
+>
+NOTE! Distribution goes to infinity. Counter for one value that is X or more. 1 - until X.
+>
 
 Example:
 
@@ -479,32 +516,31 @@ pr <- c(pnorm(1,m,s), diff(pnorm(c(1,3),m,s)), diff(pnorm(c(3,10),m,s)), diff(pn
 chisq.test(nj,p=pr)
 ```
 
-###Mann-whitney test
+### Mann-whitney test
 
 N = Number of pairs - number of draws
 
 **For small tests**
 
-c1 values sample 1  
-c2 values sample 2  
+c1 values sample 1\
+c2 values sample 2
 
 *wilcox.text(x, c2)*
 
-**Larger sample test > 10**
+**Larger sample test \> 10**
 
-You can use a approximation based on the normal distribution. Therefore critical values will be 1.96 for this two sided test.
+You can use a approximation based on the normal distribution. Therefore
+critical values will be 1.96 for this two sided test.
 
+### Wilcoxon test
 
-###Wilcoxon test
+Two options\
+- Do not predict direction --\> two sided\
+- Predict direction --\> one sided
 
-Two options  
-	- Do not predict direction --> two sided  
-	- Predict direction --> one sided  
-	
 *wilcox.test(w1, w2, paired=TRUE,correct=FALSE)*
 
-
-###Run test
+### Run test
 
 ```{r message=FALSE, warning=FALSE}
 library(randtests)
@@ -520,4 +556,3 @@ Find p value: Probability of getting this test statistic or more:
 ```{r}
 pchisq(ts, df, lower.tail=FALSE)
 ```
-
