--- a/book.bib
+++ b/book.bib
@@ -1,19 +1,28 @@
 @Book{xie2015,
-  title = {Dynamic Documents with {R} and knitr},
-  author = {Yihui Xie},
-  publisher = {Chapman and Hall/CRC},
-  address = {Boca Raton, Florida},
-  year = {2015},
-  edition = {2nd},
-  note = {ISBN 978-1498716963},
-  url = {http://yihui.org/knitr/},
+  title = "Dynamic Documents with {R} and knitr",
+  author = "Yihui Xie",
+  publisher = "Chapman and Hall/CRC",
+  address = "Boca Raton, Florida",
+  year = 2015,
+  edition = "2nd",
+  note = "ISBN 978-1498716963",
+  url = "http://yihui.org/knitr/"
 }
 
 @Manual{kdnuggets2017,
-  title = {Structural equation model},
-  author = {kevin Gray},
-  publisher = {kdnuggets},
-  year = {2017},
-  url = {https://www.kdnuggets.com/2017/03/structural-equation-modeling.html},
+  title = "Structural equation model",
+  author = "Kevin Gray",
+  publisher = "kdnuggets",
+  year = 2017,
+  url = "https://www.kdnuggets.com/2017/03/structural-equation-modeling.html"
+}
+
+@Book{JCurwin2013,
+  title = "Quantitative methods for business decisions",
+  author = "Jon Curwin, Roger Slater and David Eadson",
+  publisher = "Cengage Learning",
+  year = 2013,
+  edition = "7th",
+  url = "www.cengage.co.uk"
 }
 
