--- a/book.bib
+++ b/book.bib
@@ -26,3 +26,29 @@
   url = "www.cengage.co.uk"
 }
 
+@Book{JHair2013,
+  title = "Multivariate Data Analysis",
+  author = "Joseph. Hair, William. Black, Rolph E. Anderson, Barry J. Babin",
+  publisher = "Pearson Education Limited",
+  year = 2013,
+  edition = "7th"
+}
+
+@Book{GJames2013,
+  title = "An Introduction to Statistical Learning",
+  author = "Gareth. James, Daniela. Witten, Trevor. Hastie, Robert. Tibshirani",
+  publisher = "Springer",
+  year = 2013,
+  edition = "8th",
+  url = "http://www.springer.com/series/417"
+}
+
+@Book{THastie2017,
+  title = "The Elements of Statistical Learning",
+  author = " Trevor. Hastie, Robert. Tibshirani, Jerome. Friedman",
+  publisher = "Springer",
+  year = 2017,
+  edition = "12th"
+}
+
+
